--- a/demo/index.html
+++ b/demo/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Home</title>
     <meta charset="utf-8">
-    <meta name="format-detection" content="telephone=no"/>
+    <meta name="format-detection" content="telephone=no" />
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/camera.css"/>
-    <link rel="stylesheet" href="css/owl.carousel.css"/>
+    <link rel="stylesheet" href="css/camera.css" />
+    <link rel="stylesheet" href="css/owl.carousel.css" />
     <script src="js/jquery.js"></script>
     <script src="js/jquery-migrate-1.2.1.js"></script>
     <script src="js/jquery.equalheights.js"></script>
@@ -28,30 +29,34 @@
     <script src="js/html5shiv.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="css/ie.css">
     <![endif]-->
+    <link href='css/fullcalendar.min.css' rel='stylesheet' />
 </head>
+
 <body>
-<div class="page">
-<!--========================================================
+    <div class="page">
+        <!--========================================================
                           HEADER
 =========================================================-->
-<header id="header">
-    <div id="stuck_container">
-        <div class="container">
-            <div class="row">
-                <div class="grid_12">
-                    <div class="brand put-left">
-                        <h1>
-                            <a href="index.html">
-                                <img src="images/logo.png" alt="Logo"/>
-                            </a>
-                        </h1>
-                    </div>
-                    <nav class="nav put-right">
-                        <ul class="sf-menu">
-                            <li class="current"><a href="index.html">Home</a></li>
-                            <li>
-                                <a href="about.html">About</a>
-                                <ul>
+        <header id="header">
+            <div id="stuck_container">
+                <div class="container">
+                    <div class="row">
+                        <div class="grid_12">
+                            <div class="brand put-left">
+                                <h1>
+                                    <a href="index.html">
+                                        <img src="image/malab.png" alt="Logo" />
+                                    </a>
+                                </h1>
+                            </div>
+                            <nav class="nav put-right">
+                                <ul class="sf-menu">
+                                    <li class="current">
+                                        <a href="index.html">Home</a>
+                                    </li>
+                                    <li>
+                                        <a href="research.html">Research</a>
+                                        <!-- <ul>
                                     <li><a href="#">Lorem ipsum</a></li>
                                     <li><a href="#">Dolor sit amet</a>
                                     <li><a href="#">Ctetur adipisicing</a>
@@ -64,243 +69,128 @@
                                             <li><a href="#">Minim veniam</a></li>
                                         </ul>
                                     </li>
+                                </ul> -->
+                                    </li>
+                                    <li>
+                                        <a href="publications.html">Publications</a>
+                                    </li>
+                                    <li>
+                                        <a href="team.html">Team</a>
+                                    </li>
+                                    <li>
+                                        <a href="contacts.html">Contacts</a>
+                                    </li>
+                                    <!-- <li>
+                                        <a id="language" style="font-size:15px;" href="#">中文</a>
+                                    </li> -->
                                 </ul>
-                            </li>
-                            <li><a href="services.html">Services</a></li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="contacts.html">Contacts</a></li>
-                        </ul>
-                    </nav>
+                            </nav>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-</header>
-<!--========================================================
+        </header>
+        <!--========================================================
                           CONTENT
 =========================================================-->
-<section id="content">
-	<div class="ic">Collect from <a href="http://www.17scuai.com/" >网页模板</a></div>
-<div class="camera-wrapper">
-    <div id="camera" class="camera-wrap">
-        <div data-src="images/index_slide01.jpg">
-            <div class="fadeIn camera_caption">
-                <h2 class="text_1 color_1">Solutions that you need!</h2>
-                <a class="btn_1" href="#">More info</a>
+        <section id="content">
+            <div class="camera-wrapper">
+                <div id="camera" class="camera-wrap">
+                    <div data-src="image/background.png">
+                        <div class="fadeIn camera_caption">
+                            <h2 class="text_1 color_1">Welcome to CASIA MALab</h2>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div data-src="images/index_slide02.jpg">
-            <div class="fadeIn camera_caption">
-                <h2 class="text_1 color_1">Lorem ipsum dolor sit!</h2>
-                <a class="btn_1" href="#">More info</a>
-            </div>
-        </div>
-        <div data-src="images/index_slide03.jpg">
-            <div class="fadeIn camera_caption">
-                <h2 class="text_1 color_1">Lorem ipsum dolor sit amet, consectetur!</h2>
-                <a class="btn_1" href="#">More info</a>
-            </div>
-        </div>
-    </div>
-</div>
 
-<div class="container">
-    <div class="row wrap_1 wrap_5">
-        <div class="grid_3">
-            <div class="box_1">
-                <div class="icon_1"></div>
-                <h3 class="text_2 color_2 maxheight1"><a href="#">Budget Planning</a></h3>
-                <p class="text_3 color_2 maxheight">
-                    Lorem ipsum dolor sit amettetur dipiscing elit. In mollis erat mattis
-                </p>
-                <a class="btn_2" href="#">read more</a></div>
-        </div>
-        <div class="grid_3">
-            <div class="box_1">
-                <div class="icon_2"></div>
-                <h3 class="text_2 color_2 maxheight1"><a href="#">Marketing Research</a></h3>
-                <p class="text_3 color_2 maxheight">
-                    Dorem ipsum dolor sit amettetur dipiscing elit. In mollis erat mattis
-                </p>
-                <a class="btn_2" href="#">read more</a></div>
-        </div>
-        <div class="grid_3">
-            <div class="box_1">
-                <div class="icon_3"></div>
-                <h3 class="text_2 color_2 maxheight1"><a href="#">Employee Benefits</a></h3>
-                <p class="text_3 color_2 maxheight">
-                    Kerem ipsum dolor sit amettetur dipiscing elit. In mollis erat mattis
-                </p>
-                <a class="btn_2" href="#">read more</a></div>
-        </div>
-        <div class="grid_3">
-            <div class="box_1">
-                <div class="icon_4"></div>
-                <h3 class="text_2 color_2 maxheight1"><a href="#">Risk Management</a></h3>
-                <p class="text_3 color_2 maxheight">
-                    Norem ipsum dolor sit amettetur dipiscing elit. In mollis erat mattis neque facilisis, sit
-                    amet uesas
-                </p>
-                <a class="btn_2" href="#">read more</a></div>
-        </div>
-    </div>
-</div>
-<div class="bg_1 wrap_2 wrap_4">
-    <div class="container">
-        <div class="row">
-            <div class="preffix_2 grid_8">
-                <h2 class="header_1 wrap_3 color_3">
-                    The Best Marketing Services, <br/>
-                    Data & Analysis
-                </h2>
+            <div class="bg_1 wrap_2 wrap_4">
+                <div class="container">
+                    <div class="row">
+                        <div class="preffix_2 grid_8">
+                            <h2 class="header_1 wrap_3 color_3">
+                                Lab Introduction
+                            </h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="grid_12">
+                            <div class="box_1">
+                                <p class="text_3">
+                                    Visit our official blog for more detailed information about this
+                                    <a href="http://blog.templatemonster.com/free-website-templates/" rel="nofollow">
+                                        freebie.
+                                    </a>
+                                    <br/> Want more
+                                    <a href="http://www.templatemonster.com/properties/topic/business-services/" rel="nofollow">
+                                        business themes
+                                    </a>? Check out the same name category at TemplateMonster.com.
+                                    <br/>
+                                    <br/> Vivamus at magna non nunc tristique rhoncus. Aliquam nibh ante, egestas id dictum a,
+                                    commodo luctus libero. Praesent faucibus malesuada faucibus. Donec laoreet metus id laoreet
+                                    malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur
+                                    orci sed
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="grid_12">
-                <div class="box_1">
-                    <p class="text_3">
-                        Visit our official blog for more detailed information about this
-                        <a href="http://blog.templatemonster.com/free-website-templates/" rel="nofollow">
-                            freebie.
-                        </a>
-                        <br/>
-                        Want more
-                        <a href="http://www.templatemonster.com/properties/topic/business-services/"
-                           rel="nofollow">
-                            business themes
-                        </a>?
-                        Check out the same name category at
-                        TemplateMonster.com.
-                        <br/>
-                        <br/>
-                        Vivamus at magna non nunc tristique rhoncus. Aliquam nibh ante, egestas id dictum a,
-                        commodo luctus libero. Praesent faucibus malesuada faucibus. Donec laoreet metus id
-                        laoreet malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                        consectetur orci sed
+
+            <div class="bg_1 wrap_7 wrap_5">
+                <div class="container">
+                    <div class="row">
+                        <div class="grid_12">
+                            <h2 class="header_1 wrap_8 color_3">
+                                News
+                            </h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="grid_12">
+                            <div id="owl">
+                                <div class="item">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row wrap_9 wrap_4 wrap_10">
+                    <div class="grid_12">
+                        <div class="header_1 wrap_3 color_3">
+                            AI Conference Deadlines
+                        </div>
+                        <div class="box_3">
+                            <div id='loading'>loading...</div>
+                            <div id='calendar'></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <!--========================================================
+                          FOOTER
+=========================================================-->
+    <footer id="footer" class="color_9">
+        <div class="container">
+            <div class="row">
+                <div class="grid_12">
+                    <p class="info text_4 color_4">
+                        ©
+                        <span id="copyright-year"></span> | Casia MALab
+                        <br/> Total. 25528 visits, 16218 visitors
+                        <!-- 本站总访问量25528次 本站访客数16218人 -->
                     </p>
                 </div>
             </div>
         </div>
-    </div>
-</div>
-<div class="container">
-    <div class="row wrap_1">
-        <div class="grid_6">
-            <div class="wrap_6">
-                <div class="box_2 maxheight2">
-                    <div class="put-left"><img src="images/index_img01.png" alt="Image 1"/></div>
-                    <div class="caption">
-                        <h3 class="text_2 color_2">
-                            Save Your Time <br/>
-                            with Us
-                        </h3>
-                        <p class="text_3">
-                            Morem ipsum dolor sit amettetur dipiscing elit. In mollis erat mattis neque facilisis,
-                            sit amet ultries wertolio dasererat rutru.
-                        </p>
-                        <a href="#" class="btn_2">read more</a>
-                    </div>
-                    <div class="clearfix"></div>
-                </div>
-            </div>
-        </div>
-        <div class="grid_6">
-                <div class="wrap_6">
-                    <div class="box_2 maxheight2">
-                        <div class="put-left"><img src="images/index_img02.png" alt="Image 2"/></div>
-                        <div class="caption">
-                            <h3 class="text_2 color_2">
-                                The Highest <br/>
-                                Quality Services
-                            </h3>
-                            <p class="text_3">
-                                Lorem ipsum dolor sit amettetur dipiscing elit. In mollis erat mattis neque facilisis,
-                                sit amet ultries wertolio dasererat rutrum.
-                            </p>
-                            <a href="#" class="btn_2">read more</a>
-                        </div>
-                        <div class="clearfix"></div>
-                    </div>
-                </div>
-           
-        </div>
-    </div>
-</div>
-<div class="bg_1 wrap_7 wrap_5">
-    <div class="container">
-        <div class="row">
-            <div class="grid_12">
-                <h2 class="header_1 wrap_8 color_3">
-                    What Clients Say
-                </h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="grid_12">
-                <div id="owl">
-                    <div class="item">
-                        <p class="text_3">
-                            Vivamus at magna non nunc tristique rhoncus. Aliquam nibh ante, egestas id dictum a,
-                            commodo luctus libero. Praesent faucibus malesuada faucibus. Donec laoreet metus id
-                            laoreet malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                            consectetur orci sed nulla facilisis consequat. Curabitur vel lorem sit amet nulla
-                            ullamcorper fermentum. In vitae varius augue, eu consectetur ligula. Etiam dui eros,
-                            <br/>
-                            laoreet sit amet est vel, commodo venenatis eros. Fusce adipiscing quam id risus
-                            sagittis, non consequat lacus interdum.
-                        </p>
-                    </div>
-                    <div class="item">
-                        <p class="text_3">
-                            Vivamus at magna non nunc tristique rhoncus. Aliquam nibh ante, egestas id dictum a,
-                            commodo luctus libero. Praesent faucibus malesuada faucibus. Donec laoreet metus id
-                            laoreet malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                            consectetur orci sed nulla facilisis consequat. Curabitur vel lorem sit amet nulla
-                            ullamcorper fermentum. In vitae varius augue, eu consectetur ligula. Etiam dui eros,
-                            <br/>
-                            laoreet sit amet est vel, commodo venenatis eros. Fusce adipiscing quam id risus
-                            sagittis, non consequat lacus interdum.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="container">
-    <div class="row wrap_9 wrap_4 wrap_10">
-        <div class="grid_12">
-            <div class="header_1 wrap_3 color_3">
-                Get in Touch
-            </div>
-            <div class="box_3">
-                <ul class="list_1">
-                    <li><a class="fa fa-twitter" href="#"></a></li>
-                    <li><a class="fa fa-facebook" href="#"></a></li>
-                    <li><a class="fa fa-google-plus" href="#"></a></li>
-                    <li><a class="fa fa-pinterest" href="#"></a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
-</section>
-</div>
-<!--========================================================
-                          FOOTER
-=========================================================-->
-<footer id="footer" class="color_9">
-    <div class="container">
-        <div class="row">
-            <div class="grid_12">
-                <p class="info text_4 color_4">
-                    © <span id="copyright-year"></span> | <a href="#">Privacy Policy</a> <br/>
-                    More Templates <a href="http://www.17scuai.com/" target="_blank" title="17素材">17素材</a> - Collect from <a href="http://www.17scuai.com/" title="网页模板" target="_blank">网页模板</a>
-                </p>
-            </div>
-        </div>
-    </div>
-</footer>
-<script src="js/script.js"></script>
+    </footer>
+    <script src="js/script.js"></script>
+    <script type="text/javascript" src="js/fullcalendar.min.js"></script>
+    <script src="js/index.js"></script>
 </body>
+
 </html>
