--- a/demo/publications.html
+++ b/demo/publications.html
@@ -2,19 +2,16 @@
 <html lang="en">
 
 <head>
-    <title>Contacts</title>
+    <title>Publicatins</title>
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no" />
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/contact-form.css" />
     <script src="js/jquery.js"></script>
     <script src="js/jquery-migrate-1.2.1.js"></script>
     <script src="js/jquery.equalheights.js"></script>
     <script src='js/modal.js'></script>
-    <script src='js/TMForm.js'></script>
-    <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=OLV2W7QHEE9btblyddTkBQBWhjXw030h"></script>
     <!--[if lt IE 9]>
     <div style=' clear: both; text-align:center; position: relative;'>
         <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
@@ -67,13 +64,13 @@
                                         </li>
                                     </ul> -->
                                     </li>
-                                    <li>
+                                    <li class="current">
                                         <a href="publications.html">Publications</a>
                                     </li>
                                     <li>
                                         <a href="team.html">Team</a>
                                     </li>
-                                    <li class="current">
+                                    <li>
                                         <a href="contacts.html">Contacts</a>
                                     </li>
                                 </ul>
@@ -87,36 +84,42 @@
                               CONTENT
     =========================================================-->
         <section id="content">
-            <div class="ic">More Website Templates @ TemplateMonster.com - September08, 2014!</div>
             <div class="container">
                 <div class="row wrap_11">
-                    <div class="grid_12">
-                        <h2 class="header_2 indent_4">Find Us</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="bg_1 wrap_17 wrap_19">
-                <div class="container">
-                    <div class="row">
-                        <div class="grid_8">
-                            <div id="DeviceMap" style="width:100%;height:400px;border: 1px solid #ddd;border-radius: 4px;"></div>
+                    <div class="grid_10">
+                        <div class="wrap_10">
+                            <div class="tabHeader">
+                                <span class="0">Conference paper</span> |
+                                <span class="1">Journal article</span> |
+                                <span class="2">Patent</span>
+                                <span class="-1" style="float:right">
+                                        <svg t="1622703467210" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="31806" width="20" height="20"><path d="M968.60387555 366.4651757L762.47495111 366.4651757c-26.29680545 0-47.56724243-21.30660315-47.56724243-47.56954832 0-26.26076065 21.27165061-47.56724243 47.56724243-47.56724243l82.74757404 0c-74.64295538-105.47230341-197.38593659-174.41678222-336.4460468-174.41678223-227.68541392 0-412.26027615 184.57607585-412.26027616 412.2578489 0 227.6842003 184.57607585 412.25906252 412.26027616 412.25906251 227.6842003 0 412.25906252-184.57607585 412.2590625-412.25906251 0-26.26076065 21.27055835-47.56724243 47.56615017-47.56724244 26.26294518 0 47.57076195 21.30660315 47.57076196 47.56724244 0 280.22586785-227.19146667 507.39670282-507.39670281 507.39670281-280.20887703 0-507.39791645-227.16962133-507.39791645-507.39670281 0-280.22465422 227.18903941-507.39548918 507.39791645-507.39548919 170.06227911 0 320.27079111 83.84554477 412.25906251 212.30629926l0-85.45688084c0-26.26294518 21.27055835-47.56845605 47.56615017-47.56845605 26.26294518 0 47.57076195 21.30551088 47.57076195 47.56845605l0 190.27285334C1016.17451615 345.15869392 994.86439348 366.4651757 968.60387555 366.4651757Z" fill="#707070" p-id="31807"></path></svg>
+                                </span>
+                            </div>
+                            <div id="researchList">
+                            </div>
+
                         </div>
-                        <div class="grid_4">
-                            <h3 class="text_2 color_2">
-                                Contact Info
-                            </h3>
-                            <br/>
-                            <address>
-                                <p class="text_6 color_6">
-                                    4th Floor, Intelligent Building, 
-                                    <br/> Number 95, Zhongguancun East Road,
-                                    <br/> Haidian District, Beijing, China
-                                    <br/> Telephone: +1 800 603 6035
-                                    <br/> FAX: +1 800 889 9898
-                                    <br/> E-mail:
-                                    <a href="#">mail@ia.ac.cn</a>
-                                </p>
-                            </address>
+                    </div>
+                    <div class="grid_2">
+                        <div class="wrap_10">
+                            <div class="keyHeader">
+                                KeyWords
+                            </div>
+                            <ul class="list_2 text_3 color_5" id="keywords">
+                                <li class="qq">
+                                    <a href="#">单智能体</a>
+                                </li>
+                                <li class="ww">
+                                    <a href="#">多智能体</a>
+                                </li>
+                                <li class="ee">
+                                    <a href="#">不完美信息</a>
+                                </li>
+                                <li class="rr">
+                                    <a href="#">博弈</a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -148,9 +151,21 @@
             </div>
         </div>
     </footer>
-    <script src="js/baidu.jquery.js"></script>
+
+    <!-- 模态框（Modal） -->
+    <div class="tanchuang">
+        <div class="dialog">
+            <div class="close">
+                <svg t="1622691991695" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="30999" width="20" height="20"><path d="M529.92 527.36L857.6 197.12c12.8-12.8 12.8-33.28 0-46.08s-33.28-12.8-46.08 0L483.84 481.28 153.6 151.04c-12.8-12.8-33.28-12.8-46.08 0s-12.8 33.28 0 46.08L435.2 527.36 107.52 857.6c-12.8 12.8-12.8 33.28 0 46.08 5.12 5.12 15.36 10.24 23.04 10.24s17.92-2.56 23.04-10.24l327.68-330.24 327.68 330.24c5.12 7.68 15.36 10.24 23.04 10.24 7.68 0 17.92-2.56 23.04-10.24 12.8-12.8 12.8-33.28 0-46.08L529.92 527.36z" fill="#888888" p-id="31000"></path></svg>
+            </div>
+            <h3>Cite</h3>
+            <div>
+                <pre class="text_5" id="citeContent"></pre>
+            </div>
+        </div>
+    </div>
     <script src="js/script.js"></script>
-    <script src="js/contact.js"></script>
+    <script src="js/publications.js"></script>
 </body>
 
 </html>
